--- a/Again/Again.Application/Again.Application.csproj
+++ b/Again/Again.Application/Again.Application.csproj
@@ -6,4 +6,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Again.Domain\Again.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
