--- a/Again/Again.WebApi/Again.WebApi.csproj
+++ b/Again/Again.WebApi/Again.WebApi.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Again.Application\Again.Application.csproj" />
+      <ProjectReference Include="..\Again.Infrastructure\Again.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
